[gd_scene load_steps=15 format=3 uid="uid://dndcoql0hrp8l"]

[ext_resource type="Script" uid="uid://h6l0kghaf86d" path="res://AG/AGMinigame2/player.gd" id="1_67453"]
[ext_resource type="Script" uid="uid://by6ji44sii767" path="res://AG/AGMinigame2/game.gd" id="1_g5my5"]
[ext_resource type="Script" uid="uid://d15qlxg7rga5y" path="res://MAIN/character_loader.gd" id="2_g5my5"]
[ext_resource type="Texture2D" uid="uid://cf27e7w528x5r" path="res://icon.svg" id="3_u7q7k"]
[ext_resource type="AudioStream" uid="uid://dywtlg3vq5l42" path="res://AG/AGMinigame2/Part1.mp3" id="5_324xu"]
[ext_resource type="AudioStream" uid="uid://dywcxlciq01io" path="res://AG/AGMinigame2/Part2.mp3" id="6_d05br"]
[ext_resource type="AudioStream" uid="uid://cnvpioumt2vf8" path="res://AG/AGMinigame2/Part3.mp3" id="7_d05br"]
[ext_resource type="Texture2D" uid="uid://bq5q06huw3575" path="res://AG/AGMinigame2/Background.png" id="8_5vwku"]
[ext_resource type="Texture2D" uid="uid://cprw43b1uie5p" path="res://AG/AGMinigame2/Planet.png" id="9_n6bqk"]
[ext_resource type="PackedScene" uid="uid://hor2d86g55pb" path="res://AG/AGMinigame2/boulder.tscn" id="10_crifx"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n6bqk"]
size = Vector2(112, 112)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_crifx"]
size = Vector2(96, 96)

[sub_resource type="AudioStreamSynchronized" id="AudioStreamSynchronized_5vwku"]
stream_count = 3
stream_0/stream = ExtResource("5_324xu")
stream_0/volume = 0.0
stream_1/stream = ExtResource("6_d05br")
stream_1/volume = 0.0
stream_2/stream = ExtResource("7_d05br")
stream_2/volume = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_crifx"]
radius = 13.0

[node name="Game" type="Node2D"]
script = ExtResource("1_g5my5")

[node name="Player" type="CharacterBody2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 128)
script = ExtResource("1_67453")

[node name="Sprite" type="Sprite2D" parent="Player"]
texture = ExtResource("3_u7q7k")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
shape = SubResource("RectangleShape2D_n6bqk")
disabled = true

[node name="ShootMark" type="Marker2D" parent="Player"]
position = Vector2(0, -64)

[node name="HurtBox" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/HurtBox"]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_crifx")

[node name="energyRegen" type="Timer" parent="Player"]
wait_time = 0.5
autostart = true

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamSynchronized_5vwku")
autoplay = true

[node name="CharacterLoader" type="Node" parent="." node_paths=PackedStringArray("character")]
unique_name_in_owner = true
script = ExtResource("2_g5my5")
character = NodePath("../Player")
sprite_node_name = "Sprite"

[node name="Planet" type="Sprite2D" parent="."]
position = Vector2(576, 320)
scale = Vector2(3, 3)
texture = ExtResource("9_n6bqk")

[node name="planet_hurt" type="Area2D" parent="Planet"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Planet/planet_hurt"]
shape = SubResource("CircleShape2D_crifx")

[node name="CanvasLayer2" type="CanvasLayer" parent="."]

[node name="PlayerHealthText" type="RichTextLabel" parent="CanvasLayer2"]
unique_name_in_owner = true
offset_left = 9.0
offset_top = 8.0
offset_right = 184.0
offset_bottom = 33.0
text = "PLAYER HEALTH: 3/3"

[node name="PlanetHealthText" type="RichTextLabel" parent="CanvasLayer2"]
unique_name_in_owner = true
offset_left = 984.0
offset_top = 8.0
offset_right = 1143.0
offset_bottom = 39.0
text = "PLANET HEALTH: 3/3"

[node name="ComboText" type="RichTextLabel" parent="CanvasLayer2"]
unique_name_in_owner = true
offset_top = 40.0
offset_right = 1152.0
offset_bottom = 80.0
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "[center]COMBO: 1X[center]"

[node name="ScoreText" type="RichTextLabel" parent="CanvasLayer2"]
unique_name_in_owner = true
offset_right = 1152.0
offset_bottom = 56.0
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[center]SCORE: 0"

[node name="PlayerEnergy" type="RichTextLabel" parent="CanvasLayer2"]
unique_name_in_owner = true
offset_left = 8.0
offset_top = 40.0
offset_right = 191.0
offset_bottom = 72.0
text = "PLAYER ENERGY: 10/10"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -2

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
z_index = -101
position = Vector2(568, 336)
scale = Vector2(7.43333, 4.01111)
texture = ExtResource("8_5vwku")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
layer = -1
scroll_ignore_camera_zoom = true

[node name="BackLayer" type="ParallaxLayer" parent="ParallaxBackground"]
unique_name_in_owner = true
z_index = -3
z_as_relative = false
motion_scale = Vector2(0.005, 0.005)

[node name="MidLayer" type="ParallaxLayer" parent="ParallaxBackground"]
unique_name_in_owner = true
z_index = -3
z_as_relative = false
motion_scale = Vector2(0.01, 0.01)

[node name="FrontLayer" type="ParallaxLayer" parent="ParallaxBackground"]
unique_name_in_owner = true
z_index = -3
z_as_relative = false
motion_scale = Vector2(0.02, 0.02)

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true

[node name="BoulderSpawn" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="TimeIncrease" type="Timer" parent="."]
wait_time = 5.0
autostart = true
ignore_time_scale = true

[node name="Boulder" parent="." instance=ExtResource("10_crifx")]
visible = false

[connection signal="area_entered" from="Player/HurtBox" to="." method="_on_hurt_box_area_entered"]
[connection signal="area_entered" from="Player/HurtBox" to="Player" method="_on_area_2d_area_entered"]
[connection signal="timeout" from="Player/energyRegen" to="Player" method="_on_energy_regen_timeout"]
[connection signal="area_entered" from="Planet/planet_hurt" to="." method="_on_planet_hurt_area_entered"]
[connection signal="timeout" from="BoulderSpawn" to="." method="_on_boulder_spawn_timeout"]
[connection signal="timeout" from="TimeIncrease" to="." method="_on_time_increase_timeout"]
